syntax = "proto3";

package account;

import "google/protobuf/empty.proto";

option java_package = "com.blog.account.proto";
option java_multiple_files = true;

service AccountService {
  rpc AddNewAccount(NewAccountRequest) returns (CreateAccountResponse) {};
  rpc ListAccount(google.protobuf.Empty) returns (ListAccountResponse) {};
}

message NewAccountRequest {
  string username = 1;
  string password = 2;
}

message OnlyIdResponse {
  int64 id = 1;
}

message AccountResponse {
  string username = 1;
  string password = 2;
}

message AccountGrpcError {
  string code = 1;
  string message = 2;
  map<string, string> errors = 3;
  string exception = 4;
  bool is_client_error = 5;
}

message CreateAccountResponse {
  message Data {
    int64 id = 1;
  }
  bool success = 1;
  oneof response {
    Data data = 2;
    AccountGrpcError error = 3;
  }
}

message ListAccountResponse {
  message Data {
    repeated AccountResponse accounts = 1;
  }

  bool success = 1;
  oneof response {
    Data data = 2;
    AccountGrpcError error = 3;
  }
}